--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -218,6 +218,12 @@
                 android:layout_height="wrap_content"
                 android:text="收到消息：" />
 
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:visibility="gone"/>
+
             <TextView
                 android:id="@+id/receivedMsg"
                 android:layout_width="match_parent"
@@ -227,6 +233,8 @@
                 android:scrollbars="vertical"
                 android:fadeScrollbars="false"
                 android:textIsSelectable="true"/>
+
+
         </LinearLayout>
 
         <View
